# AR-Chess

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
e-learning_project/3d_models/: queen_white.mtl  rook_black.mtl
e-learning_project/include/: Chessboard.h  ChessboardTools.h  ConsoleManipulation.h  Field.h  Figure.h  Puzzles.h  Tools.h  main.h
e-learning_project/include/calibration/: Calibration.h
e-learning_project/include/drawing/: DrawFigures.h  DrawTools.h  RenderUtils.h
e-learning_project/include/markerdetection/: Marker.h  markerdetection.h
e-learning_project/src/: ConsoleManipulation.cpp  Tools.cpp  main.cpp
e-learning_project/src/calibration/: Calibration.cpp
e-learning_project/src/drawing/: DrawFigures.cpp  DrawTools.cpp  RenderUtils.cpp
e-learning_project/src/logic/: Chessboard.cpp  ChessboardTools.cpp  Field.cpp  Figure.cpp  Puzzles.cpp
e-learning_project/src/markerdetection/: PoseEstimation.cpp  markerdetection.cpp
